<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:padding="12sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/TeamName2Points"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewTeamName"

                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/TeamSport2Points"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewSportName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"

                    android:text="TextView"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/TeamLeader2Points"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewTeamLeader"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/TrainingDay2Points"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewTrainingDay"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/TrainingHour2Points"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewTrainingHour"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="24sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textViewPlayers"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/PLAYERS"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fillViewport="true">

            <ListView
                android:id="@+id/playersList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/contact_team_button_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_team_button_Mail" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onCancel"
                    android:text="@string/back_button" />

                <Button
                    android:id="@+id/valid_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onValid"
                    android:text="@string/valid_button" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>